Updated modal with additional information, fixed z-index issue.

--- a/angular-ui/src/app/components/map/map.component.css
+++ b/angular-ui/src/app/components/map/map.component.css
@@ -2,4 +2,5 @@
     height: 100%;
     align-self: auto;
     margin: 0%;
+    z-index: 1;
 }
